@@ -5,6 +5,7 @@
 * Some minor bug fixes for FlightMemory imports.
 * Autocomplete prioritizes IATA over non-IATA airlines.
 * Calendar now goes back to 1970.
+* Filter select lenghts now hardcoded (160px) to prevent IE bug.
 
 <b>2008-11-28</b>
 
